add authentication & authorization

--- a/internal/constant/data.yaml
+++ b/internal/constant/data.yaml
@@ -4,8 +4,11 @@ permissions:
   - users:update
   - users:delete
   - manage:system
+  - roles:create
   - roles:read
   - roles:update
   - roles:delete
   - roles:assign
   - roles:unassign
+default_permission:
+  - users:read
